--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,17 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".LibraryScreenActivity"
+            android:exported="true"
+            android:label="@string/title_activity_genre"
+            android:theme="@style/Theme.MusicPlayerApplication">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".SignInActivity"
             android:exported="true"
             android:label="@string/title_activity_sign_in"
