rc/main/AndroidManifest.xml         modified:   app/src/main/java/com/example/musicplayerapplication/DashboardActivity.kt         modified:   app/src/main/java/com/example/musicplayerapplication/HomeScreen.kt         modified:   app/src/main/java/com/example/musicplayerapplication/LibraryScreen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,17 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".HomeActivity"
+            android:exported="true"
+            android:label="@string/title_activity_genre"
+            android:theme="@style/Theme.MusicPlayerApplication">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".SignInActivity"
             android:exported="true"
             android:label="@string/title_activity_sign_in"
