--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,41 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="MusicPlayerApplication"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MusicPlayerApplication">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="MusicPlayerApplication"
-            android:theme="@style/Theme.MusicPlayerApplication">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".PlaylistScreenActivity"
-            android:exported="true"
-            android:label="MusicPlayerApplication"
-            android:theme="@style/Theme.MusicPlayerApplication">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        android:theme="@style/Theme.MusicPlayerApplication"
+        tools:targetApi="31">
 
+        <!-- MAIN LAUNCHER ACTIVITY -->
         <activity
-            android:name=".SettingScreen"
+            android:name=".DashboardActivity"
             android:exported="true"
-            android:theme="@style/Theme.MusicPlayerApplication" />
+            android:theme="@style/Theme.MusicPlayerApplication">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
