--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MusicPlayerApplication">
         <activity
+            android:name=".PermissionRequestScreenActivity"
+            android:exported="true"
+            android:label="@string/title_activity_permission_request_screen"
+            android:theme="@style/Theme.MusicPlayerApplication">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".GetStartedActicity"
             android:exported="true"
             android:label="@string/title_activity_get_started_acticity"
