--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,6 +94,12 @@
             android:exported="false"
             android:theme="@style/Theme.MusicPlayerApplication" />
 
+        <!-- SEARCH ACTIVITY -->
+        <activity
+            android:name=".View.SearchActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MusicPlayerApplication" />
+
     </application>
 
 </manifest>
