--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,6 +106,12 @@
             android:exported="false"
             android:theme="@style/Theme.MusicPlayerApplication" />
 
+        <!-- AUDIO EFFECTS SCREEN -->
+        <activity
+            android:name=".View.AudioEffectsScreen"
+            android:exported="false"
+            android:theme="@style/Theme.MusicPlayerApplication" />
+
     </application>
 
 </manifest>
